<resources>
    <string name="app_name">Plantopia</string>
    <string name="home_text1">포스트</string>
    <string name="home_text2">DIY</string>
    <string name="home_text3">제품</string>

    <string name="none_plant">등록된 식물이 없습니다.</string>
    <string name="none_diary">작성된 다이어리가 없습니다.</string>
    <string name="none_scrap">스크랩 된 게시물이 없습니다.</string>

    <string name="profile_text1">이메일 계정</string>
    <string name="profile_text2">로그아웃</string>
    <string name="profile_text3">회원 탈퇴</string>

    <string name="add_plant_text1">식물 종류</string>
    <string name="add_plant_text2">Plantopia 기기연결</string>
    <string name="add_plant_text3">푸시알림</string>

    <string name="info_tab1_text1">Plantopia Care</string>
    <string name="info_tab1_text2">Plants Care</string>

    <string name="sign_up">회원가입</string>
    <string name="sign_up2">직접 회원가입</string>
    <string name="confirm_pwd">confirm password</string>
    <string name="sign_up_warning">이미 사용중인 이메일입니다.</string>
    <string name="sign_up_warning2">8자 이상의 비밀번호를 입력해주세요.</string>
    <string name="sign_up_warning3">비밀번호가 일치하지 않습니다.</string>
    <string name="sign_up_warning4">비밀번호를 입력해주세요.</string>
    <string name="sign_up_warning5">이메일 주소를 입력해주세요.</string>
    <string name="sign_up_warning6">비밀번호를 잘못 입력하셨습니다.</string>
    <string name="sign_up_warning7">존재하지 않는 계정입니다.</string>
    <string name="sign_up_warning8">비밀번호를 한번 더 입력해주세요.</string>
    <string name="sign_up_warn_token">여러 계정을 만들 수 없습니다. 기존의 계정을 사용해주세요.</string>
    <string name="sign_up_success">가입에 성공했습니다. 다시 로그인해주세요.</string>

    <string name="cancel">취소</string>
    <string name="ok">확인</string>
    <string name="sign_in">로그인</string>
    <string name="hint_email">email</string>
    <string name="hint_pwd">password</string>
    <string name="hint_name">name</string>
    <string name="finish">완료</string>
    <string name="skip">넘어가기</string>
    <string name="skip_msg">닉네임과 프로필 사진 설정을 생략하시겠습니까? (이후 프로필 설정에서 수정이 가능합니다.)</string>
    <string name="profile_intro">Plantopia에서 사용할 프로필을 설정해주세요!</string>

    <string name="plant_state1">&quot; 물 주세요! &quot;</string>
    <string name="plant_state2">&quot; 햇빛이 필요해요! &quot;</string>
    <string name="plant_state3">&quot; 너무 건조해요! &quot;</string>
    <string name="plant_state4">&quot; 너무 더워요! &quot;</string>
    <string name="plant_state5">&quot; 너무 추워요! &quot;</string>
    <string name="plant_state6">&quot; 몸상태가 최악이예요... &quot;</string>
    <string name="plant_state7">&quot; 기분이 좋아요! &quot;</string>

    <string name="state_good">GOOD</string>
    <string name="state_bad">BAD</string>
    <string name="state_low">LOW!</string>

    <string name="need_login">로그인이 필요합니다.</string>
    <string name="need_login2">Plantopia의 식물 관리 서비스를 \n이용하기 위해선 로그인이 필요합니다.</string>
    <string name="name_error">오류 발생. 다시 시도해주세요.</string>

    <string name="username">43831eaa-43f9-445f-9914-32d75018557d</string>
    <string name="password">666iihGX8rPA</string>
    <string name="stuckyi_workspace">23a9b530-ddde-4a05-8a97-9e68412fbaa2</string>
    <string name="calathea_workspace">b2ae5482-baf5-44ea-892e-4373faa5aa36</string>
    <string name="oroya_workspace">d4a60bf3-0726-4ee1-b916-d1f06a689c18</string>
    <string name="palm_workspace">2aa88f2a-e2f5-4730-9a00-7bff60a918c7</string>
    <string name="nagi_workspace">a0d2db0f-5097-46b5-bedd-60387eb96545</string>

    <string name="add_plant">플랜트 추가</string>
    <string name="search_plant">식물을 검색하세요.</string>
    <string name="cancel_join">회원가입 취소</string>
    <string name="cancel_join_msg">회원가입을 취소하시겠습니까?</string>
    <string name="check_name">이름을 입력해주세요.</string>
    <string name="check_name2">10자 이하로 입력해주세요.</string>
    <string name="check_name3">12자 이하로 입력해주세요.</string>

    <string name="select_img">식물의 사진을 선택해주세요!</string>
    <string name="diary_test">자연을 그리워하고 가까이하는 건 인간의 본능이라고 한다. 실내에서 굳이 식물을 키우는 건 다 이런데서 비롯되었을 거다. 식물을 키우면 심리적 안정감은 물론이고 미세먼지 제거, 공기 정화, 가습, 음이온 배출 등 여러 실용적인 효과도 있다.</string>
</resources>
