<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/add_profile_images_02" />

    <EditText
        android:id="@+id/sign_in_email_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="45dp"
        android:fontFamily="sans-serif"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/sign_in_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="45dp"
        android:fontFamily="sans-serif"
        android:hint="@string/hint_pwd"
        android:inputType="textPassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="20dp"
        android:background="@android:color/transparent"
        android:fontFamily="sans-serif"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:onClick="finishBtnOnClicked"
        android:text="완료"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="또는"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/facebook_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="5dp"
            android:background="@android:color/transparent"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:scaleType="fitCenter"
            android:src="@drawable/facebook_login" />

        <ImageButton
            android:id="@+id/ggl_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:background="@android:color/transparent"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:scaleType="fitCenter"
            android:src="@drawable/ggl_login" />
    </LinearLayout>

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="15dp"
        android:background="@android:color/transparent"
        android:fontFamily="sans-serif"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:onClick="signUpBtnOnClicked"
        android:text="@string/sign_up2"
        android:textSize="18sp" />
</LinearLayout>