<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_below="@+id/actionbar_text"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:background="#d8d8d8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginVertical="10dp"
            android:text="@string/home_text1"
            android:textAppearance="@android:style/TextAppearance"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/post_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:overScrollMode="never"
            android:clipToPadding="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginVertical="10dp"
            android:text="@string/home_text2"
            android:textAppearance="@android:style/TextAppearance"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/diy_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:orientation="horizontal"
            android:overScrollMode="never"
            android:clipToPadding="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginVertical="10dp"
            android:text="@string/home_text3"
            android:textAppearance="@android:style/TextAppearance"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/product_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:orientation="horizontal"
            android:overScrollMode="never"
            android:clipToPadding="true"/>

    </LinearLayout>
</ScrollView>