<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="20dp">

            <com.joooonho.SelectableRoundedImageView
                android:id="@+id/plant_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:src="@drawable/add_plant_images_02"
                app:sriv_left_bottom_corner_radius="30dp"
                app:sriv_left_top_corner_radius="30dp"
                app:sriv_right_bottom_corner_radius="30dp"
                app:sriv_right_top_corner_radius="30dp" />

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="right|bottom"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/camera" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/plant_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="코코"
                android:layout_marginRight="5dp"
                android:layout_marginVertical="25dp"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/plant_edit_layout"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:padding="0dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/plant_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/change_name_btn"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:background="@android:color/transparent"
                android:onClick="changeNameBtnOnClicked"
                android:scaleType="fitCenter"
                android:src="@drawable/name" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/tab_back_custom">

            <RelativeLayout
                android:id="@+id/search_plant_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/plant_type_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_toLeftOf="@id/search_plant_btn"
                    android:background="@android:color/transparent"
                    android:gravity="left|center_vertical"
                    android:text="@string/add_plant_text1"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />

                <ImageButton
                    android:id="@+id/search_plant_btn"
                    android:layout_width="24dp"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:onClick="searchBtnOnClicked"
                    android:layout_marginRight="20dp"
                    android:background="@android:color/transparent"
                    android:gravity="right"
                    android:scaleType="fitCenter"
                    android:src="@drawable/search" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/search_plant_layout"
                android:background="#BDBDBD" />

            <RelativeLayout
                android:id="@+id/connect_device_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/search_plant_layout">

                <Button
                    android:id="@+id/connect_device_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:paddingHorizontal="15dp"
                    android:text="@string/add_plant_text2"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />

                <Switch
                    android:id="@+id/connect_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/connect_device_layout"
                android:background="#BDBDBD" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/connect_device_layout">

                <Button
                    android:id="@+id/delete_account_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="left|center_vertical"
                    android:paddingHorizontal="15dp"
                    android:text="@string/add_plant_text3"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />

                <Switch
                    android:id="@+id/push_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>